Modification for security review.

--- a/sharinpix/src/classes/Client.cls
+++ b/sharinpix/src/classes/Client.cls
@@ -1,4 +1,4 @@
-global class Client {
+global with sharing class Client {
     private static Client instance = null;
 
     global static Client getInstance(){
@@ -21,6 +21,23 @@ global class Client {
         HttpRequest req = new HttpRequest();
         req.setEndpoint(this.endpoint_url + endpoint);
         req.setMethod('POST');
+        req.setHeader('Authorization', 'Token token="' + token(claims) + '"');
+        req.setHeader('Content-Type', 'application/json');
+        req.setBodyAsBlob(body);
+        Http http = new Http();
+        HTTPResponse response = http.send(req);
+        if (response.getStatus() == 'OK'){
+            return JSON.deserializeUntyped(response.getBody());
+        }else{
+            throw new SharinPixException('API response ' + response.getStatus() + ': '+ response.getBody());
+        }
+        return new Map<String, Object>();
+    }
+
+    global Object put(String endpoint, Blob body, Map<String, Object> claims){
+        HttpRequest req = new HttpRequest();
+        req.setEndpoint(this.endpoint_url + endpoint);
+        req.setMethod('PUT');
         req.setHeader('Authorization', 'Token token="' + token(claims) + '"');
         req.setHeader('Content-Type', 'application/json');
         req.setBodyAsBlob(body);
@@ -103,6 +120,15 @@ global class Client {
     }
 
     global Object upload_attachment(id attachmentId, string albumId){
+        if (!(Schema.sObjectType.Attachment.isAccessible() &&
+            Schema.sObjectType.Attachment.fields.Id.isAccessible() &&
+            Schema.sObjectType.Attachment.fields.Name.isAccessible() &&
+            Schema.sObjectType.Attachment.fields.Body.isAccessible()))
+        {
+            throw new SharinPixException('Insufficient privilege');
+            return null;
+        }
+
         Boolean b_true = true;
         Map<String, Object> album_access = new Map<String, Object>();
         album_access.put('see', b_true);
