Add README and remove package version constraint
* Add README and remove package version constraint

* Update README.md

* Update README.md

* Rename class to follow convention

* Update README from gdoc

* Add new line in README

--- a/Demo-Attachment/src/classes/SharinPixDemoAttachmentUpload.cls
+++ b/Demo-Attachment/src/classes/SharinPixDemoAttachmentUpload.cls
@@ -1,4 +1,4 @@
-public class AP01_UploadToSharinPix {
+public class SharinPixDemoAttachmentUpload {
 
     public static void uploadAttachment(list<Attachment> attachmentList, set<id> emailMsgIdSet){
         map<Id, Id> caseIdMap = new map<Id, Id>();
